force-app/main/default/objects/Author_Research_Paper__c/Author_Research_Paper__c.object-meta.xml
<CustomObject>
    <description>Junction object between Author and Research paper</description>
    <label>Author Research Paper</label>
    <nameField>
        <displayFormat>AURE-{0000}</displayFormat>
        <label>Author Research</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Author Research Papers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>