force-app/main/default/objects/Author_Research_Paper__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>IN Master detail With Author</description>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Author Research Papers</relationshipLabel>
    <relationshipName>Author_Research_Papers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>