force-app/main/default/objects/Author_Research_Paper__c/fields/Is_Primary_Author__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Author__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Author</label>
    <type>Checkbox</type>
</CustomField>