force-app/main/default/objects/Author_Research_Paper__c/fields/Research_Paper__c.field-meta.xml
<CustomField>
    <fullName>Research_Paper__c</fullName>
    <description>In  master detail WIth Research paper</description>
    <label>Research Paper</label>
    <referenceTo>Research_Paper__c</referenceTo>
    <relationshipLabel>Author Research Papers</relationshipLabel>
    <relationshipName>Author_Research_Papers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>